[metadata]
name = putio-webdav-cli
author = Marlin Forbes
author-email = marlinf@datashaman.com
summary = WebDAV cli for Put.IO.
home-page = https://github.com/datashaman/putio-webdav-cli
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Internet
    Topic :: Utilities
keywords =
    torrent
    download
    seedbox
    media

[entry_points]
console_scripts =
    putio = putio_webdav_cli:main

[files]
data_files =
    share/putio-webdav-cli = etc/config.py.dist
packages =
    putio_webdav_cli
